# x3p

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt  vcpkg.json
Licence/: openGPS_Licence.txt
include/opengps/: data_point.h  data_point_type.h  info.h  iso5436_2.h  messages.h  opengps.h  point_iterator.h  point_vector.h
include/opengps/cxx/: data_point.hxx  exceptions.hxx  info.hxx  iso5436_2.hxx  iso5436_2_handle.hxx  iso5436_2_xsd_utils.hxx  opengps.hxx  point_iterator.hxx  point_vector.hxx  point_vector_base.hxx  string.hxx
src/ISO5436_2_XML/: CMakeLists.txt  Config.cmake.in  FindXSD.cmake  iso5436_2.rc.in  iso5436_2.xsd
src/ISO5436_2_XML/c/: data_point_c.cxx  data_point_c.hxx  info_c.cxx  iso5436_2_c.cxx  iso5436_2_handle_c.hxx  messages_c.cxx  messages_c.hxx  point_iterator_c.cxx  point_iterator_c.hxx  point_vector_c.cxx  point_vector_c.hxx
src/ISO5436_2_XML/cxx/: auto_ptr_types.hxx  binary_lsb_point_vector_reader_context.cxx  binary_lsb_point_vector_reader_context.hxx  binary_lsb_point_vector_writer_context.cxx  binary_lsb_point_vector_writer_context.hxx  binary_msb_point_vector_reader_context.cxx  binary_msb_point_vector_reader_context.hxx  binary_msb_point_vector_writer_context.cxx  binary_msb_point_vector_writer_context.hxx  binary_point_vector_reader_context.cxx  binary_point_vector_reader_context.hxx  binary_point_vector_writer_context.cxx  binary_point_vector_writer_context.hxx  data_point_impl.cxx  data_point_impl.hxx  data_point_parser.hxx  data_point_parser_impl.hxx  data_point_proxy.cxx  environment.cxx  environment.hxx  exceptions.cxx  info.cxx  inline_validity.hxx  iso5436_2.cxx  iso5436_2_container.cxx  iso5436_2_container.hxx  iso5436_2_xsd_utils.cxx  linux_environment.cxx  linux_environment.hxx  missing_data_point_parser.cxx  missing_data_point_parser.hxx  point_buffer.cxx  point_buffer.hxx  point_buffer_impl.hxx  point_iterator.cxx  point_validity_provider.cxx  point_validity_provider.hxx  point_vector.cxx  point_vector_iostream.cxx  point_vector_iostream.hxx  (+31 more)
src/ISO5436_2_XML_Demo/: CMakeLists.txt  ISO5436_2_XML_Demo.cxx
src/ISO5436_2_XML_Demo/samplefiles/: ISO25178-72-sample1.xml
src/MATLAB/: CMakeLists.txt
src/MATLAB/CreateSampleFiles/: CreateSampleFromNMS.m  Readme.txt
src/MATLAB/ImportExportX3P/: CMakeLists.txt  X3PUtilities.cpp  X3PUtilities.h  openX3P_mex.cpp  writeX3P_mex.cpp
src/MATLAB/X3PToolbox/: README.txt  TestX3P.m
src/zlibwapi/: CMakeLists.txt
